[package]
name = "packetdb"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["frame", "database",  "sniffer", "field"]

[dependencies]
frame = { path = "./frame/" }
database = { path = "./database/" }
sniffer = {path = "./sniffer/"}
field = {path = "./field/"}
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10.66", features = ["v110"] }
actix-cors = "0.6.4"
anyhow = "1.0.75"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
argon2 = { version = "0.5", features = ["std"] }


# [build]
# rustflags = ["-Z", "threads=8"]

[profile.release]
strip = true
opt-level = 3
