[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame = { path = "../frame/" }
rayon = "1.10"
regex = "1.7.0"
chrono = "0.4.23"
toml = "0.7.4"
# serde = "1.0.136"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.96"
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.10.0"
byteorder = "1.4.3"
ipnet = "2.5.1"
anyhow = "1.0.75"
