[package]
name = "database"
version = "0.1.0"
edition = "2024"


[dependencies]
frame = { path = "../frame/" }
field = { path = "../field/" }
pql = { path = "../pql/"}
dblib = { path = "../dblib/"}
pcap = {path = "../pcap/"}
rayon = "1.10"
regex = "1.7.0"
chrono = "0.4.38"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.96"
log = "0.4.22"
byteorder = "1.4.3"
anyhow = "1.0.75"
rusqlite = "0.31.0"
filetime = "0.2.25"
