[package]
name = "datastore"
version = "0.1.0"
edition = "2024"

[dependencies]
field = {path = "../field/" }
frame = {path = "../frame/" }
pcap = {path = "../pcap/"}
dblib = {path = "../dblib/"}

byteorder = "1.5.0"
anyhow = "1.0.75"
rayon = "1.10"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.136"
log = "0.4.22"
