[package]
name = "frame"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
ipnet = "2.5.1"
dyn-clone = "1.0.11"
log = "0.4.22"
env_logger = "0.10.0"
anyhow = "1.0.75"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.96"
chrono = "0.4.38"

